fix: :lipstick: making sure that column titles do not wrap

--- a/src/components/DataTable/styles.scss
+++ b/src/components/DataTable/styles.scss
@@ -15,6 +15,7 @@ $right-border-lighter: 2px solid rgba($colum-border-color-dark, 0.1);
 
   th {
     padding: 1.3em 1em 1em 1em;
+    white-space: nowrap;
   }
 
   &.group-heading th {
